nested/piComponents.json
{
    "$schema": "https://schema.management.azure.com/schemas/2015-01-01/deploymentTemplate.json#",
    "contentVersion": "1.0.0.0",
    "parameters": {
        "PIAFSQLSettings": {
            "type": "object"
        },
        "PIDAServersettings": {
            "type": "object"
        },
        "PIBAServersettings": {
            "type": "object"
        },
        "networkSettings": {
            "type": "object"
        },
        "apiVersions": {
            "type": "object"
        }
    },
    "variables": {
        "vnetId": "[resourceId('Microsoft.Network/virtualNetworks', parameters('networkSettings').virtualNetworkName)]",
        "subnetRef3": "[concat(variables('vnetId'), '/subnets/', parameters('networkSettings').subnet3Name)]",
        "subnetRef4": "[concat(variables('vnetId'), '/subnets/', parameters('networkSettings').subnet4Name)]",
        "subnetRef5": "[concat(variables('vnetId'), '/subnets/', parameters('networkSettings').subnet5Name)]"
    },
    "resources": [
        {
            "type": "Microsoft.Storage/storageAccounts",
            "name": "[parameters('PIAFSQLSettings').sqlStorageAccountName]",
            "apiVersion": "[parameters('apiVersions').storageApiVersion]",
            "location": "[parameters('PIAFSQLSettings').location]",
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage",
            "properties": {}
        },
        {
            "name": "[parameters('PIAFSQLSettings').networkSecurityGroupName]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('PIAFSQLSettings').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "3389",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "default-allow-sql",
                        "properties": {
                            "priority": 1001,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "1433",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "https",
                        "properties": {
                            "priority": 1002,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Outbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "PIData",
                        "properties": {
                            "priority": 1600,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "5450",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "SQLAnalysis2383",
                        "properties": {
                            "priority": 2000,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "2383",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "SQLAnalysis2382",
                        "properties": {
                            "priority": 2100,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "2382",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "HTTP",
                        "properties": {
                            "priority": 100,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "80",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "PIUFLConnector",
                        "properties": {
                            "priority": 2200,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "5460",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "PIServer",
                        "properties": {
                            "priority": 2201,
                            "sourceAddressPrefix": "*",
                            "protocol": "*",
                            "destinationPortRange": "5457",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('PIAFSQLSettings').networkInterfaceName]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('PIAFSQLSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('PIAFSQLSettings').networkSecurityGroupName)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('subnetRef3')]"
                            },
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[parameters('PIAFSQLSettings').sqlPrivateIPAddress]"
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('PIAFSQLSettings').networkSecurityGroupName)]"
                }
            }
        },
        {
            "name": "[parameters('PIAFSQLSettings').sqlservername]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('PIAFSQLSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('PIAFSQLSettings').networkInterfaceName)]",
                "[concat('Microsoft.Storage/storageAccounts/', parameters('PIAFSQLSettings').sqlStorageAccountName)]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "[parameters('PIAFSQLSettings').sqlservername]",
                    "adminUsername": "[parameters('PIAFSQLSettings').adminUsername]",
                    "adminPassword": "[parameters('PIAFSQLSettings').adminPassword]",
                    "windowsConfiguration": {
                        "provisionVmAgent": "true"
                    }
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('PIAFSQLSettings').vmSize]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('PIAFSQLSettings').publisher]",
                        "offer": "[parameters('PIAFSQLSettings').offer]",
                        "sku": "[parameters('PIAFSQLSettings').sku]",
                        "version": "[parameters('PIAFSQLSettings').version]"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('PIAFSQLSettings').storageAccountType]"
                        }
                    },
                    "dataDisks": [
                        {
                            "diskSizeGB": "1023",
                            "lun": 0,
                            "createOption": "Empty"
                        }
                    ]
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('PIAFSQLSettings').networkInterfaceName)]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": "true",
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts/', parameters('PIAFSQLSettings').sqlStorageAccountName)).primaryEndpoints.blob]"
                    }
                }
            }
        },
        {
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "name": "[concat(parameters('PIAFSQLSettings').sqlservername, '/SqlIaasExtension')]",
            "location": "[parameters('PIAFSQLSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/', parameters('PIAFSQLSettings').sqlservername)]"
            ],
            "properties": {
                "type": "SqlIaaSAgent",
                "publisher": "Microsoft.SqlServer.Management",
                "typeHandlerVersion": "1.2",
                "autoUpgradeMinorVersion": "true",
                "settings": {
                    "AutoTelemetrySettings": {
                        "Region": "[parameters('PIAFSQLSettings').location]"
                    },
                    "AutoPatchingSettings": {
                        "PatchCategory": "WindowsMandatoryUpdates",
                        "Enable": true,
                        "DayOfWeek": "[parameters('PIAFSQLSettings').sqlAutopatchingDayOfWeek]",
                        "MaintenanceWindowStartingHour": "[parameters('PIAFSQLSettings').sqlAutopatchingStartHour]",
                        "MaintenanceWindowDuration": "[parameters('PIAFSQLSettings').sqlAutopatchingWindowDuration]"
                    },
                    "KeyVaultCredentialSettings": {
                        "Enable": false,
                        "CredentialName": ""
                    },
                    "ServerConfigurationsManagementSettings": {
                        "SQLConnectivityUpdateSettings": {
                            "ConnectivityType": "[parameters('PIAFSQLSettings').sqlConnectivityType]",
                            "Port": "1433"
                        },
                        "SQLWorkloadTypeUpdateSettings": {
                            "SQLWorkloadType": "[parameters('PIAFSQLSettings').sqlStorageWorkloadType]"
                        },
                        "SQLStorageUpdateSettings": {
                            "DiskCount": "[parameters('PIAFSQLSettings').sqlStorageDisksCount]",
                            "NumberOfColumns": "[parameters('PIAFSQLSettings').sqlStorageDisksCount]",
                            "StartingDeviceID": "2",
                            "DiskConfigurationType": "New"
                        },
                        "AdditionalFeaturesServerConfigurations": {
                            "IsRServicesEnabled": "false"
                        }
                    }
                },
                "protectedSettings": {
                    "SQLAuthUpdateUserName": "[parameters('PIAFSQLSettings').sqlAuthenticationLogin]",
                    "SQLAuthUpdatePassword": "[parameters('PIAFSQLSettings').sqlAuthenticationPassword]"
                }
            }
        },
        {
            "name": "[concat(parameters('PIAFSQLSettings').sqlservername,'/CustomScriptExtension')]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "location": "[parameters('PIAFSQLSettings').location]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/',parameters('PIAFSQLSettings').sqlservername,'/extensions/SqlIaasExtension')]"
            ],
            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "CustomScriptExtension",
                "typeHandlerVersion": "1.8",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "https://projectiot.blob.core.windows.net/iotp2/psscript.ps1"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -File psscript.ps1',' ',parameters('PIAFSQLSettings').domainName,' ',parameters('PIAFSQLSettings').Username,' ',parameters('PIAFSQLSettings').Password)]"
                }
            }
        },
        {
            "type": "Microsoft.Resources/deployments",
            "name": "sqlSimulatorSetup",
            "apiVersion": "[parameters('apiVersions').deploymentApiVersion]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/',parameters('PIAFSQLSettings').sqlservername,'/extensions/CustomScriptExtension')]"
            ],
            "properties": {
                "mode": "Incremental",
                "templateLink": {
                    "uri": "[concat(parameters('PIAFSQLSettings').baseUrl, 'nested/sqlsimulator.json')]",
                    "contentVersion": "1.0.0.0"
                },
                "parameters": {
                    "sqlservername": {
                        "value": "[parameters('PIAFSQLSettings').sqlservername]"
                    },
                    "computeApiVersion": {
                        "value": "[parameters('apiVersions').computeApiVersion]"
                    },
                    "location": {
                        "value": "[parameters('PIAFSQLSettings').location]"
                    },
                    "fileUris3": {
                        "value": "[parameters('PIAFSQLSettings').fileUris3]"
                    },
                    "scriptFileName3": {
                        "value": "[parameters('PIAFSQLSettings').scriptFileName3]"
                    },
                    "simulatorUrl": {
                        "value": "[parameters('PIAFSQLSettings').simulatorUrl]"
                    },
                    "dataserviceUrl": {
                        "value": "[parameters('PIAFSQLSettings').dataserviceUrl]"
                    },
                    "PIWebApiSimulatorUrl": {
                        "value": "[parameters('PIAFSQLSettings').PIWebApiSimulatorUrl]"
                    }
                }
            }
        },
        {
            "name": "[parameters('PIDAServersettings').PIDADiagStgAcnt]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "[parameters('apiVersions').storageApiVersion]",
            "location": "[parameters('PIDAServersettings').location]",
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage",
            "properties": {}
        },
        {
            "name": "[parameters('PIDAServersettings').PIDAPublicIpAddressName]",
            "type": "Microsoft.Network/publicIpAddresses",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('PIDAServersettings').location]",
            "properties": {
                "publicIpAllocationMethod": "[parameters('PIDAServersettings').publicIpAddressType]",
                "dnsSettings": {
                    "domainNameLabel": "[parameters('PIDAServersettings').PIDADnsLabelPrefix]"
                }
            }
        },
        {
            "name": "[parameters('PIDAServersettings').PIDANetworkSecurityGroupName]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('PIDAServersettings').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "3389",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "https",
                        "properties": {
                            "priority": 1022,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "http",
                        "properties": {
                            "priority": 1023,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "80",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('PIDAServersettings').PIDANic]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('PIDAServersettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('PIDAServersettings').PIDANetworkSecurityGroupName)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('subnetRef4')]"
                            },
                            "privateIPAllocationMethod": "Dynamic",
                            "publicIpAddress": {
                                "id": "[resourceId('Microsoft.Network/publicIpAddresses', parameters('PIDAServersettings').PIDAPublicIpAddressName)]"
                            }
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('PIDAServersettings').PIDANetworkSecurityGroupName)]"
                }
            }
        },
        {
            "name": "[parameters('PIDAServersettings').PIDAVMName]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('PIDAServersettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('PIDAServersettings').PIDANic)]",
                "[concat('Microsoft.Storage/storageAccounts/', parameters('PIDAServersettings').PIDADiagStgAcnt)]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "[parameters('PIDAServersettings').PIDAVMName]",
                    "adminUsername": "[parameters('PIDAServersettings').adminUsername]",
                    "adminPassword": "[parameters('PIDAServersettings').adminPassword]",
                    "windowsConfiguration": {
                        "provisionVmAgent": "true"
                    }
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('PIDAServersettings').PIDAVMSize]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('PIDAServersettings').publisher]",
                        "offer": "[parameters('PIDAServersettings').offer]",
                        "sku": "[parameters('PIDAServersettings').sku]",
                        "version": "[parameters('PIDAServersettings').version]"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('PIDAServersettings').storageAccountType]"
                        }
                    },
                    "dataDisks": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('PIDAServersettings').PIDANic)]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts', parameters('PIDAServersettings').PIDADiagStgAcnt)).primaryEndpoints['blob']]"
                    }
                }
            }
        },
        {
            "name": "[concat(parameters('PIDAServersettings').PIDAVMName,'/CustomScriptExtension1')]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "location": "[parameters('PIDAServersettings').location]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/',parameters('PIDAServersettings').PIDAVMName)]",
                 "[concat('Microsoft.Compute/virtualMachines/',parameters('PIAFSQLSettings').sqlservername,'/extensions/CustomScriptExtension')]"
            ],
            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "CustomScriptExtension",
                "typeHandlerVersion": "1.8",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "https://projectiot.blob.core.windows.net/iotp2/psscript.ps1"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -File psscript.ps1',' ',parameters('PIDAServersettings').domainName,' ',parameters('PIDAServersettings').Username,' ',parameters('PIDAServersettings').Password)]"
                }
            }
        },
        {
            "name": "[parameters('PIBAServerSettings').PIBADiagStgAcnt]",
            "type": "Microsoft.Storage/storageAccounts",
            "apiVersion": "[parameters('apiVersions').storageApiVersion]",
            "location": "[parameters('PIBAServerSettings').location]",
            "sku": {
                "name": "Standard_LRS"
            },
            "kind": "Storage",
            "properties": {}
        },
        {
            "name": "[parameters('PIBAServerSettings').PIBANetworkSecurityGroupName]",
            "type": "Microsoft.Network/networkSecurityGroups",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('PIBAServerSettings').location]",
            "properties": {
                "securityRules": [
                    {
                        "name": "default-allow-rdp",
                        "properties": {
                            "priority": 1000,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "3389",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "https",
                        "properties": {
                            "priority": 1024,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "443",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    },
                    {
                        "name": "http",
                        "properties": {
                            "priority": 1025,
                            "sourceAddressPrefix": "*",
                            "protocol": "TCP",
                            "destinationPortRange": "80",
                            "access": "Allow",
                            "direction": "Inbound",
                            "sourcePortRange": "*",
                            "destinationAddressPrefix": "*"
                        }
                    }
                ]
            }
        },
        {
            "name": "[parameters('PIBAServerSettings').PIBANic]",
            "type": "Microsoft.Network/networkInterfaces",
            "apiVersion": "[parameters('apiVersions').networkApiVersion]",
            "location": "[parameters('PIBAServerSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkSecurityGroups/', parameters('PIBAServerSettings').PIBANetworkSecurityGroupName)]"
            ],
            "properties": {
                "ipConfigurations": [
                    {
                        "name": "ipconfig1",
                        "properties": {
                            "subnet": {
                                "id": "[variables('subnetRef5')]"
                            },
                            "privateIPAllocationMethod": "Static",
                            "privateIPAddress": "[parameters('PIBAServerSettings').PIBAPrivateIPAddress]"
                        }
                    }
                ],
                "networkSecurityGroup": {
                    "id": "[resourceId('Microsoft.Network/networkSecurityGroups', parameters('PIBAServerSettings').PIBANetworkSecurityGroupName)]"
                }
            }
        },
        {
            "name": "[parameters('PIBAServerSettings').PIBAVMName]",
            "type": "Microsoft.Compute/virtualMachines",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "location": "[parameters('PIBAServerSettings').location]",
            "dependsOn": [
                "[concat('Microsoft.Network/networkInterfaces/', parameters('PIBAServerSettings').PIBANic)]",
                "[concat('Microsoft.Storage/storageAccounts/', parameters('PIBAServerSettings').PIBADiagStgAcnt)]"
            ],
            "properties": {
                "osProfile": {
                    "computerName": "[parameters('PIBAServerSettings').PIBAVMName]",
                    "adminUsername": "[parameters('PIBAServerSettings').adminUsername]",
                    "adminPassword": "[parameters('PIBAServerSettings').adminPassword]",
                    "windowsConfiguration": {
                        "provisionVmAgent": "true"
                    }
                },
                "hardwareProfile": {
                    "vmSize": "[parameters('PIBAServerSettings').PIBAVMSize]"
                },
                "storageProfile": {
                    "imageReference": {
                        "publisher": "[parameters('PIBAServerSettings').publisher]",
                        "offer": "[parameters('PIBAServerSettings').offer]",
                        "sku": "[parameters('PIBAServerSettings').sku]",
                        "version": "[parameters('PIBAServerSettings').version]"
                    },
                    "osDisk": {
                        "createOption": "fromImage",
                        "managedDisk": {
                            "storageAccountType": "[parameters('PIBAServerSettings').storageAccountType]"
                        }
                    },
                    "dataDisks": []
                },
                "networkProfile": {
                    "networkInterfaces": [
                        {
                            "id": "[resourceId('Microsoft.Network/networkInterfaces', parameters('PIBAServerSettings').PIBANic)]"
                        }
                    ]
                },
                "diagnosticsProfile": {
                    "bootDiagnostics": {
                        "enabled": true,
                        "storageUri": "[reference(resourceId('Microsoft.Storage/storageAccounts', parameters('PIBAServerSettings').PIBADiagStgAcnt)).primaryEndpoints['blob']]"
                    }
                }
            }
        },
        {
            "name": "[concat(parameters('PIBAServerSettings').PIBAVMName,'/CustomScriptExtension2')]",
            "type": "Microsoft.Compute/virtualMachines/extensions",
            "location": "[parameters('PIBAServerSettings').location]",
            "apiVersion": "[parameters('apiVersions').computeApiVersion]",
            "dependsOn": [
                "[concat('Microsoft.Compute/virtualMachines/',parameters('PIBAServerSettings').PIBAVMName)]",
                 "[concat('Microsoft.Compute/virtualMachines/',parameters('PIBAServerSettings').PIBAVMName,'/extensions/CustomScriptExtension2')]"
            ],
            "properties": {
                "publisher": "Microsoft.Compute",
                "type": "CustomScriptExtension",
                "typeHandlerVersion": "1.8",
                "autoUpgradeMinorVersion": true,
                "settings": {
                    "fileUris": [
                        "https://projectiot.blob.core.windows.net/iotp2/psscript.ps1"
                    ]
                },
                "protectedSettings": {
                    "commandToExecute": "[concat('powershell -ExecutionPolicy Unrestricted -File psscript.ps1',' ',parameters('PIBAServerSettings').domainName,' ',parameters('PIBAServerSettings').Username,' ',parameters('PIBAServerSettings').Password)]"
                }
            }
        }
    ],
    "outputs": {
        "PIDAFQDN": {
            "type": "string",
            "value": "[reference(parameters('PIDAServersettings').PIDAPublicIpAddressName).dnsSettings.fqdn]"
        }
    }
}
